--- a/recipes/perl-gd/meta.yaml
+++ b/recipes/perl-gd/meta.yaml
@@ -7,7 +7,7 @@ source:
   md5: c4b3afd98b2c4ce3c2e1027d101a8f1e
 build:
   ##ignore_prefix_files: True
-  number: 6
+  number: 7
   skip: True
 
 requirements:
@@ -32,7 +32,7 @@ test:
     - GD
     - GD::Simple ## (no version defined)
     - GD::Polygon ## (no version defined)
-    # - GD::Polyline ## (version 0.2 defined?!)
+    - GD::Polyline ## (version 0.2 defined?!)
 
 about:
   home: http://metacpan.org/pod/GD
