--- a/recipes/zagros/meta.yaml
+++ b/recipes/zagros/meta.yaml
@@ -1,10 +1,7 @@
-about:
-  home: 'http://smithlabresearch.org/software/zagros/'
-  license: 'GNU General Public License v3 (GPLv3)'
-  summary: 'zagros is a motif-discovery tool for CLIP-Seq data.'
 package:
   name: 'zagros'
   version: '1.0.0'
+
 source:
   url: http://smithlabresearch.org/downloads/zagros-1.0.0.tar.gz
   sha256: 3d8495d4217e75059a49673c8eaf524f933e2f35be325502fdbaf107e933c028
@@ -12,16 +9,24 @@ source:
 build:
   number: 2
   skip: True  # [not py27 or osx]
+
 requirements:
   build:
     - autoconf
     - {{ compiler('c') }}
+  host:
     - gawk
     - gsl
     - openblas
   run:
     - gsl
     - openblas
+
 test:
   commands:
     - 'zagros 2>&1 | grep "^Usage"'
+
+about:
+  home: 'http://smithlabresearch.org/software/zagros/'
+  license: 'GNU General Public License v3 (GPLv3)'
+  summary: 'zagros is a motif-discovery tool for CLIP-Seq data.'
