--- a/recipes/pgsa/meta.yaml
+++ b/recipes/pgsa/meta.yaml
@@ -8,17 +8,19 @@ source:
 
 build:
   number: 1
+  skip: True  # [osx]
+  patches:
+    - patch
 
 requirements:
   build:
     - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
   run:
 
 test:
   commands:
-    ##- '{ PgSAgen -h 2>&1 | grep Usage; }'
-    ##- '{ PgSAtest -h 2>&1 | grep Usage; }'
-    - PgSAtest -h
+    - '{ PgSAtest -h 2>&1 | grep Usage; }'
 
 about:
   home: http://sun.aei.polsl.pl/pgsa/
