--- a/recipes/ectyper/meta.yaml
+++ b/recipes/ectyper/meta.yaml
@@ -1,34 +1,45 @@
+{% set version = "0.5.4" %}
+
 about:
-  license: MIT
-  summary: Ectyper is a python script for serotyping e.coli genomes
-  author: Camille La Rose, Chad Laing, Sam Sung
-  home: https://github.com/phac-nml/ecoli_serotyping
+    license: Apache 2
+    summary: ECtyper is a python program for serotyping E. coli genomes
+    author: Chad Laing, Camille La Rose, Sam Sung
+    home: https://github.com/phac-nml/ecoli_serotyping
 
 package:
-  name: ectyper
-  version: 0.1
+    name: ectyper
+    version: {{ version }}
 
 source:
-  url: https://github.com/phac-nml/ecoli_serotyping/archive/v0.1.tar.gz
-  md5: 06b5793ed0f7000a05e20600b1ac5d0c
+    url: https://github.com/phac-nml/ecoli_serotyping/archive/v{{ version }}.tar.gz
+    sha256: 703420f27549c10a94b63710b801441c0324752a2a726c124f0553dd60034664
 
 build:
-  number: 2
-  skip: True # [py27]
+    skip: True # [not py35]
+    number: 2
+    script: python setup.py install
 
 requirements:
-  host:
-    - python
-  run:
-    - python
-    - pandas
-    - samtools
-    - bowtie2
-    - mash
-    - bcftools
-    - biopython
-    - blast
-    - seqtk
+    build:
+       - python >=3.5
+
+    run:
+       - python >=3.5
+       - pytest >=3.5
+       - pandas 0.23.1.*
+       - samtools 1.8.*
+       - bowtie2 2.3.4.1.*
+       - mash 2.0.*
+       - bcftools 1.8.*
+       - biopython 1.70.*
+       - blast 2.7.1.*
+       - seqtk 1.2.*
+
 test:
-  commands:
-    - ectyper -h
+    import:
+       - ectyper
+    test:
+       - "ectyper --help"
+
+
+
