fix a bunch of recipes

--- a/recipes/stacks/1.37/meta.yaml
+++ b/recipes/stacks/1.37/meta.yaml
@@ -9,8 +9,11 @@ source:
 requirements:
   build:
     - {{ compiler('c') }}
+  host:
+    - zlib
   run:
     - perl
+    - zlib
     - velvet
 test:
   commands:
